fix bugs on iphone 4 - loading

--- a/style/style.css
+++ b/style/style.css
@@ -87,6 +87,7 @@ canvas {
     top: 0;
     left: 0;
     background-color: transparent;
+    transform: translateZ(1000px)
 }
 
 #loadingScreen .center {
@@ -1317,7 +1318,6 @@ canvas {
     left: 78%;
     bottom: -48px;
     transform: translateX(-49%) rotate3d(6, 1, 1, -77deg) skew(0deg, 6deg);
-    z-index: 10;
 }
 
 #mainMap .projector .light {
@@ -1467,7 +1467,6 @@ canvas {
     left: 0px;
     top: 0px;
     background-color: #000;
-    z-index: 10;
 }
 
 #mainMap .board .carousel__cell .btnHolder {
